[gd_scene load_steps=6 format=3 uid="uid://ddahkkomg1shp"]

[ext_resource type="PackedScene" uid="uid://bicgggsr4mmls" path="res://ui/modal.tscn" id="1_75cte"]
[ext_resource type="PackedScene" uid="uid://lrue5eclvkw4" path="res://ui/halo_effect.tscn" id="2_p7ds4"]
[ext_resource type="Script" path="res://ui/finish_game_modal.gd" id="2_v6cx0"]
[ext_resource type="StyleBox" uid="uid://8olsnk4rahs6" path="res://ui/modal_button_normal.tres" id="3_q4mxi"]
[ext_resource type="StyleBox" uid="uid://cha4t4ybrm63n" path="res://ui/modal_button_hover.tres" id="4_o7wi3"]

[node name="FinishGameModal" instance=ExtResource("1_75cte")]
script = ExtResource("2_v6cx0")

[node name="Panel" parent="." index="0"]
offset_left = -164.0
offset_top = -160.0
offset_right = 164.0
offset_bottom = 160.0

[node name="VictoryLabel" type="Label" parent="Panel" index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_top = 6.0
offset_right = 121.5
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Victory"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel" index="1"]
layout_mode = 0
offset_left = 96.0
offset_top = 80.0
offset_right = 234.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 24
text = "High Score"
horizontal_alignment = 1

[node name="HighScoreNum" type="Label" parent="Panel" index="2"]
layout_mode = 0
offset_left = 96.0
offset_top = 106.0
offset_right = 234.0
offset_bottom = 148.0
text = "0"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel" index="3"]
layout_mode = 0
offset_left = 128.0
offset_top = 152.0
offset_right = 201.0
offset_bottom = 185.0
theme_override_font_sizes/font_size = 24
text = "Score
"
horizontal_alignment = 1

[node name="ScoreNum" type="Label" parent="Panel" index="4"]
layout_mode = 0
offset_left = 128.0
offset_top = 179.0
offset_right = 201.0
offset_bottom = 221.0
text = "0"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="Panel" index="5"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.5
offset_top = -72.0
offset_right = 100.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.972549, 0.890196, 0.768627, 1)
theme_override_styles/normal = ExtResource("3_q4mxi")
theme_override_styles/hover = ExtResource("4_o7wi3")
theme_override_styles/pressed = ExtResource("3_q4mxi")
theme_override_styles/focus = ExtResource("3_q4mxi")
text = "Try Again"

[node name="HaloEffect" parent="." index="1" instance=ExtResource("2_p7ds4")]

[connection signal="pressed" from="Panel/TryAgainButton" to="." method="_on_try_again_button_pressed"]
